# projet_ros_ingescape

./: Dockerfile  README.md  bashrc  entrypoint.sh  ros_interface.igssystem
ingescape_VandV/: go_to_room.igsscript  joystick_ros.igsscript  room_number_ros.igsscript
ingescape_client/: go_to_room.py  joystick.py
ingescape_ros2_interface/: package.xml  setup.cfg  setup.py
ingescape_ros2_interface/ingescape_ros2_interface/: image_on_whiteboard.py  joy_publisher_node.py  pose_publish_from_room_number.py  tf_listener_node.py
ingescape_ros2_interface/launch/: ingescape_ros_interface.launch.py
pizibot_description/: CMakeLists.txt  package.xml
pizibot_description/launch/: rsp.launch.py
pizibot_description/meshes/: camera_support.stl  chassis.stl  esp_cam.stl  (+2 more)
pizibot_gazebo/: CMakeLists.txt  package.xml
pizibot_gazebo/launch/: launch_sim.launch.py
pizibot_gazebo/param/: sim_controllers.yaml  sim_controllers_generated.yaml  twist_mux.yaml
pizibot_gazebo/rviz/: sim_viz.rviz
pizibot_gazebo/src/: yaml_modifier_node.cpp
pizibot_gazebo/worlds/: world_test1.world  world_test2.world
pizibot_navigation/: CMakeLists.txt  package.xml
pizibot_navigation/launch/: full_sim_localization.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py
pizibot_navigation/map/: my_world_map_save.pgm  my_world_map_save.yaml  world_test1_map.pgm  world_test1_map.yaml
pizibot_navigation/param/: mapper_params_online_async.yaml  nav2_params.yaml
pizibot_navigation/rviz/: localization.rviz  mapping.rviz
pizibot_teleop/: CMakeLists.txt  package.xml
(+11 files in other folders)
